--- a/sigle-page.html
+++ b/sigle-page.html
@@ -1,47 +1,81 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link  rel="stylesheet" type="text/css" href="css/style_single.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style_single.css" />
 </head>
-<body>
-<!---header logo and phone--->
-<header class="content-fluid header_container">
- <nav class="row header_container_nav_layout">
-    <div class="logo_container col-lg-3 col-xs-12 col-md-12">
-        <img src="assets/img/logo/logo-blue.svg"  type="img/svg" class="logo-img" alt="logo_img"/>
-    </div> 
-    <div class="nav_container col-lg-8">
-          <ul class="nav_navigation">
-           <li class="nav_item"><p class="nav_item_information">〒490-1207 愛知県あま市二ツ寺揚山196番地1</p></li>
-           <li class="nav_item"><h4 class="nav_item_phone"><embed type="image/svg+xml" src="assets/img/icons/phone_handset_icon_125195.svg">052-444-1420</h4></li>
-           </ul> 
-           <ul class="nav_time">
-          <li class="nav_item_time"><span>平日 8:30-17:15（12:00-13:00除く）</span></li>
-         </ul>
-    </div>
- </nav>
- </div>
-</header>
-<section class="content-fluid banner">
-    <div class="row">
-        <div class="col-lg-7">
-            <main class="text-title">
-               <h2>COMPANY</h2>
-                <h1>会社案内</h1>
-            <hr class="linea">
-            </main>
-        </div>
-    </div>
 
-</section>
-     
+<body>
+    <!---header logo and phone--->
+    <header class="content-fluid header_container">
+        <nav class="row header_container_nav_layout">
+            <div class="logo_container col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                <img src="assets/img/logo/logo-blue.svg" type="img/svg" class="logo-img" alt="logo_img" />
+            </div>
+            <div class="nav_container col-lg-8 col-md-12 col-sm-12 col-xs-12 ">
+                <ul class="nav_navigation">
+                    <li class="nav_item">
+                        <p class="nav_item_information">〒490-1207 愛知県あま市二ツ寺揚山196番地1</p>
+                    </li>
+                    <li class="nav_item">
+                        <h4 class="nav_item_phone"><embed type="image/svg+xml"
+                                src="assets/img/icons/phone_handset_icon_125195.svg">052-444-1420</h4>
+                    </li>
+                </ul>
+                <ul class="nav_time">
+                    <li class="nav_item_time"><span>平日 8:30-17:15（12:00-13:00除く）</span></li>
+                </ul>
+            </div>
+        </nav>
+        </div>
+    </header>
+    <!----header hero-->
+    <section class="content-fluid banner">
+        <div class="row">
+            <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12 ">
+                <main class="text-title">
+                    <h2>COMPANY</h2>
+                    <h1>会社案内</h1>
+                    <hr class="linea">
+                </main>
+            </div>
+        </div>
+    </section>
+    <!---breadcums----->
+    <section class="content-fluid breadcumbs">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <p class="prbreadcums">ホーム <span>/ </span><a href="#">会社案内</a></p>
+            </div>
+        </div>
+    </section>
+    <!----eyecatch-->
+    <section class="content-fluid eyecatch">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12  col-xs-12 ">
+                <div class="eyecatch-article">
+                  <div class="banner-background"></div>
+                  <article class="main">
+                      <h3 class="title_banner_main">MKK IS SUCH A COMPANY</h3>
+                      <h2 class="title_banner_">エムケイケイはこんな会社です</h2>
+                      <p>金型づくり一筋に歩んできた当社は、時代とともに多様化、高度化を極めるニーズに応えつづけてきました。</p>
+                      <p>金型というフィールドのなかで常に先を見て技術の革新に力を注いでいます。その工程のひとつひとつが手作業と同じくらい細かく手が込んでいます。
+                         複雑な形になればなるほど当然のように手間がかかり、それを仕上げるだけの技術が必要となります。ユーザーの考えを反映するため、工程のひとつひとつでユーザーの意見を尊重しています。
+                        そして当社は、制作から管理まで一環して行う、いわばトータルプロデューサー的な立場でお客様をサポートしています。</p>
+                  </article>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script></script>
     <script></script>
     <script></script>
 </body>
+
 </html>
