--- a/sigle-page.html
+++ b/sigle-page.html
@@ -54,14 +54,14 @@
         </div>
     </section>
     <!----eyecatch-->
-    <section class="content-fluid eyecatch">
+    <section class="content-fluid ">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12  col-xs-12 ">
-                <div class="eyecatch-article">
-                  <div class="banner-background"></div>
-                  <article class="main">
-                      <h3 class="title_banner_main">MKK IS SUCH A COMPANY</h3>
-                      <h2 class="title_banner_">エムケイケイはこんな会社です</h2>
+                <div class="">
+                  <div class=""></div>
+                  <article class="">
+                      <h3 class="">MKK IS SUCH A COMPANY</h3>
+                      <h2 class="_">エムケイケイはこんな会社です</h2>
                       <p>金型づくり一筋に歩んできた当社は、時代とともに多様化、高度化を極めるニーズに応えつづけてきました。</p>
                       <p>金型というフィールドのなかで常に先を見て技術の革新に力を注いでいます。その工程のひとつひとつが手作業と同じくらい細かく手が込んでいます。
                          複雑な形になればなるほど当然のように手間がかかり、それを仕上げるだけの技術が必要となります。ユーザーの考えを反映するため、工程のひとつひとつでユーザーの意見を尊重しています。
@@ -71,7 +71,145 @@
             </div>
         </div>
     </section>
-
+	 <!----message-->
+    <section class="messege">
+        <div class="row content_message">
+		    <div class="photo_message">
+                 <img class="pic_message" src="">
+				 <div class="svg_circle">
+				   <img class="circle_one" src="">
+				   <img class="circle_tow" src="">
+				   <img class="circle_three" src="">
+				 </div>
+				 <h3>エムケイケイ株式会社　代表取締役社長</h3>
+			   <h2>原 啓</h2>
+            </div>
+			  <div class="text_message">
+			     <h3>MESSAGE | Belief & Vision</h3>
+			      <h1>ご挨拶</h1>
+                 
+				 <div class="message_info">
+				 <p>わたしたちエムケイケイは、昭和41年の創業以来、誠実・努力の社訓のもと、一貫して金型づくりに励んで参りました。 
+                    たくさんの人々に良い品質の品物を届けるために、なくてはならない設備である金型。 <p>
+				<p>その使命をまっとうさせるため　また、お客様に気持よく使っていただくために、わたしたちの金型に対する品質へのこだわりは片時も揺るぎません。 
+                   安心・安全はもちろんのこと、徹底的な設計思想へのこだわりと向上心をもって高い品質を実現します。また、伝統的な匠の技を大切にするとともに、
+				   最新テクノロジーを駆使して付加価値の高い金型づくりに果敢に挑戦してまいります。<p>
+				 <p>この金型製作技術をとおして未来に繋がる人づくりを大切にしながら、地域社会にやさしい会社づくりを目指して、わたしたちは挑戦を続けてまいります。
+				    今後とも変わらぬご支援を賜りますよう、何卒よろしくお願いいたします。</p>
+				 </div>
+            </div>
+			
+        </div>
+    </section>
+	<!----Phylosop-->
+   <section class="Phylosop">
+        <div class="row_Phylosop">
+            <div class="conteiner_Phylosop ">
+                <div class="Phylosop-article">
+                  <div class="Phylosop-background"></div>
+                  <article class="main_Phylosop">
+                      <h3 class="title_Phylosop_main">Philosophy & Mission </h3>
+                      <h2 class="title_Phylosop_">経営理念</h2>
+                      <p>『こうしたいをかたちにする』という理念は、単に最新機械の導入や匠の技による、加工精度の追求だけで実現できるものではありません。
+                          金型は一枚の鉄板に工業製品としての命を吹き込むためのマザーツールです。
+                     つまり、お客様の『こうしたい』をしっかりと理解し、お客様のご希望・ご要望以上の『かたち（金型）』をご提供することが、金型製造の真髄と考えます。
+                     そんな愚直なものづくりへの取り組み、これこそわたしたちが大切にしている価値です</p>
+                  </article>
+                </div>
+            </div>
+        </div>
+    </section>
+	
+		<!----company profile-->
+   <section class="profile">
+        <div class="row_profile">
+            <div class="conteiner_profile">
+                <div class="profi_col">
+                  <div class="Phylosop-background"></div>
+                  <article class="main_Phylosop">
+                      <h3 class="title_Phylosop_main">Philosophy & Mission </h3>
+                      <h2 class="title_Phylosop_">経営理念</h2>
+                      <p>『こうしたいをかたちにする』という理念は、単に最新機械の導入や匠の技による、加工精度の追求だけで実現できるものではありません。
+                          金型は一枚の鉄板に工業製品としての命を吹き込むためのマザーツールです。
+                     つまり、お客様の『こうしたい』をしっかりと理解し、お客様のご希望・ご要望以上の『かたち（金型）』をご提供することが、金型製造の真髄と考えます。
+                     そんな愚直なものづくりへの取り組み、これこそわたしたちが大切にしている価値です</p>
+                  </article>
+                </div>
+            </div>
+        </div>
+    </section>
+   
+   		<!----Phylosop-->
+   <section class="Phylosop">
+        <div class="row_Phylosop">
+            <div class="conteiner_Phylosop ">
+                <div class="Phylosop-article">
+                  <div class="Phylosop-background"></div>
+                  <article class="main_Phylosop">
+                      <h3 class="title_Phylosop_main">Philosophy & Mission </h3>
+                      <h2 class="title_Phylosop_">経営理念</h2>
+                      <p>『こうしたいをかたちにする』という理念は、単に最新機械の導入や匠の技による、加工精度の追求だけで実現できるものではありません。
+                          金型は一枚の鉄板に工業製品としての命を吹き込むためのマザーツールです。
+                     つまり、お客様の『こうしたい』をしっかりと理解し、お客様のご希望・ご要望以上の『かたち（金型）』をご提供することが、金型製造の真髄と考えます。
+                     そんな愚直なものづくりへの取り組み、これこそわたしたちが大切にしている価値です</p>
+                  </article>
+                </div>
+            </div>
+        </div>
+    </section>
+   
+   
+   
+   
+   
+   <!----footer---->  
+	 <footer>
+	    <div class="logo">
+		   <div class="logo_img">
+		      <img src="">
+			  <h1>ベクトルスマートオブジェクト</h1>
+		   </div>
+		</div>
+		<div class="Menu_footer">
+		   <div class="footer_items">
+		    <ul>
+			  <li><h3>エムケイケイ株式会社</h3></li>
+               <li><p>〒490-1207</p></li>
+               <li><p>愛知県あま市二ツ寺揚山196番地1<p></li>
+               <li><p>tel. 052-444-1420<p></li>
+               <li><p>mail. contact@mkk-ama.jp<p></li>
+			</ul>
+			<ul>
+			  <li><p>ホーム</p></li>
+               <ul class="submenu"><p>業務内容</p></ul>
+			                   <li><p>製造工程</p></li>
+               <li><p>設備紹介<p></li>
+               <li><p>お知らせ<p></li>
+             </ul>
+			 <ul>
+			  <li><p>採用情報</p></li>
+               <ul class="submenu">
+			                    <li><p>先輩より</p><li>
+			                    <li><p>募集内容</p></li>
+								<li><p>応募フォーム</p></li>
+						</ul>
+               <li><p>お問い合わせ<p></li>
+             </ul>
+			 <ul>
+			  <li><p>会社案内</p></li>
+               <ul class="submenu"><p>エムケイケイはこんな会社です</p></ul>
+			                   <li><p>会社概要</p></li>
+                               <li><p>メッセージ<p></li>
+                               <li><p>沿革<p></li>
+							   <li><p>ビジョン<p><li></ul>
+				</ul>
+             
+		   </div>
+		</div>
+		<div class="row_copy">
+		 <p>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</p>
+		</div>
+ <footer>
 
     <script></script>
     <script></script>
