--- a/index.html
+++ b/index.html
@@ -250,15 +250,16 @@
 </section>
 
 <!---area2---->
-<section  class="Area2 content">
+<section  class="Area2 content-fluid">
 	<div class="row">
        <div class="Area2_img col-lg-6">
 	               <img src="assets/img/area2/facility.png">
 	    </div>
-		<div class="Area2_text_area col-lg-6">
-	              <h3 class="Area_title">Facility</h3>
-				   <h1 class="Area_sub_title">設備のご紹介 高精度・高品質の金型製造</h1>
-				     <div class="img_profile">
+		<div class="Area2_text_area col-lg-3">
+	              <h2 class="Area_title">FACILITY</h2>
+				   <h2 class="Area_text">設備のご紹介</h2>
+				   <h3 class="Area_sub_title">設備のご紹介 高精度・高品質の金型製造</h3>
+				     <div class="Area_text_2">
 				         <p>テキスサンプル入りますテキスサンプル入りますテキスサンプル入りますテキスサンプル入りますテキスサンプル入ります。</p>
 				       </div>
 					 <button>Read more</button>
@@ -267,12 +268,12 @@
 </div>
 </section>
 <!---area3---->
-<section  class="Area3 content">
+<section  class="Area3 content-fluid">
 	<div class="row">
 	<div class="Area3_text_area col-lg-6">
-	              <h3 class="Area_title">Introducing to  the process</h3>
-				   <h1 class="Area_sub_title">硬い金型の製造工程を 柔らかくご紹介</h1>
-				     <div class="img_profile">
+	              <h2 class="Area_title_3">INTRODUCING TO THE PROCESS</h2>
+				   <h2 class="Area_sub_title_3">硬い金型の製造工程を 柔らかくご紹介</h2>
+				     <div class="Area_text_3">
 				         <p>ひとつの金属パーツをプレスで製造する場合、縁の切断や穴あけ加工、細かな曲線の再現等、いくつかの工程に分割する必要があります・・・</p>
 				       </div>
 					 <button>Read more</button>
@@ -288,8 +289,10 @@
 </section>
 <!---instagram---->
 <section class="Instagram_feed content">
-            <div class=" row">
+            <div class="row  instagram">
 			  <img class="logo_instagram">
+			  <h5> エムケイケイ株式会社</h5>
+			  <p>テキスサンプル入りますテキスサンプル入りますテキスサンプル入りますテキスサンプル入ります。</p>
 			</div>
              <ul class="item_instagram row">
 			   <li class="item col-lg-1"><img src="assets/img/instgram/1.png"></li>
@@ -305,27 +308,27 @@
 			   
 			 </ul>
 			 <div class="buttons row">
-			    <button>More Photos</button>
-				<button>Follow on Instagram</button>
+			    <button><h2>More Photos</h2></button>
+				<button><h2>Follow on Instagram</h2></button>
 			 </div>
 </section>
 <!---Contact---->
 <section class="contact">
            <div class="information_contact">
 		      <div class="container_contact">
-		       <h3>contact</h3>
-			   <h1>お問い合わせ</h1>
-		      <p>設備・製品に関するご相談・お問い合わせは、
-                お気軽にご連絡ください。</p>
+		       <h2 class="title_contact">contact</h2>
+			   <h2  class="titlesub_contact">お問い合わせ</h2>
+		      <h4>設備・製品に関するご相談・お問い合わせは、
+                お気軽にご連絡ください。</h4>
 		      </div>
 			  <div class="buttons_contact">
 			       <div class="button_mail">
-				      <button>お問い合わせ</button>
+				      <button><p>お問い合わせ</p></button>
 				   </div>
 				   <div class="Phone">
 				      <ul>
-					  <li>052-444-1420<li>
-					  <li>平日 8:30-17:15（12:00-13:00除く）</li>
+					  <li><h2>052-444-1420</h2><li>
+					  <li><h5>平日 8:30-17:15（12:00-13:00除く）</h5></li>
 					  </ul>
 				   </div>
 			  </div>
@@ -336,17 +339,17 @@
 	    <div class="logo">
 		   <div class="logo_img">
 		      <img src="">
-			  <h1>ベクトルスマートオブジェクト</h1>
+			  <p class="title-footer">ベクトルスマートオブジェクト</p>
 		   </div>
 		</div>
 		<div class="Menu_footer">
 		   <div class="footer_items">
 		    <ul>
-			  <li><h3>エムケイケイ株式会社</h3></li>
-               <li><p>〒490-1207</p></li>
+			  <li><p>エムケイケイ株式会社</p></li>
+               <li><h2>〒490-1207</h2></li>
                <li><p>愛知県あま市二ツ寺揚山196番地1<p></li>
-               <li><p>tel. 052-444-1420<p></li>
-               <li><p>mail. contact@mkk-ama.jp<p></li>
+               <li><h2>tel. 052-444-1420<h2></li>
+               <li><h2>mail. contact@mkk-ama.jp<h2></li>
 			</ul>
 			<ul>
 			  <li><p>ホーム</p></li>
@@ -376,7 +379,7 @@
 		   </div>
 		</div>
 		<div class="row_copy">
-		 <p>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</p>
+		 <h2>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
 		</div>
  </footer>
      
