se agrega footer

--- a/sigle-page.html
+++ b/sigle-page.html
@@ -33,6 +33,65 @@
         </nav>
         </div>
     </header>
+    <!---navbar -->
+    <nav class="header-area container">
+ <!-- Navbar Area -->
+        <div class="academy-main-menu">
+            <div class="classy-nav-container  breakpoint-off">
+                <div class="content-menu">
+                    <!-- Menu -->
+                    <nav class="classy-navbar justify-content-between" id="academyNav">
+
+                        <!-- Navbar Toggler -->
+                        <div class="classy-navbar-toggler">
+                            <span class="navbarToggler"><span></span><span></span><span></span></span>
+                        </div>
+
+                        <!-- Menu -->
+                        <div class="classy-menu">
+
+                            <!-- close btn -->
+                            <div class="classycloseIcon">
+                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                            </div>
+
+                            <!-- Nav Start -->
+                            <div class="classynav">
+                                <ul>
+                                    <li><p><a href="#">ホーム</a></p></li>
+                                    <li><p><a href="#">会社案内</a></p></li>
+                                    <li><p><a href="#">業務案内</a></p></li>
+                                    <li><p><a href="#">設備紹介</a></p>
+                                        <div class="megamenu">
+                                            <ul class="single-mega cn-col-4">
+                                             <li><a href="#">設備投資名前０１</a></li>
+                                                <li><a href="#">設備投資名前０４</a></li>
+                                                <li><a href="#">設備投資名前０７</a></li>
+                                            </ul>
+                                            <ul class="single-mega cn-col-4">
+                                             <li><a href="#">設備投資名前０２</a></li>
+                                                <li><a href="#">設備投資名前０５</a></li>
+                                                <li><a href="#">設備投資名前０８</a></li>
+                                            </ul>
+                                            <ul class="single-mega cn-col-4">
+                                            <li><a href="#">設備投資名前０６</a></li>
+                                                <li><a href="#">設備投資名前０９</a></li>
+                                                <li><a href="#">設備投資名前０３ テキスト２行目</a></li>
+                                            </ul>
+                                      </div>
+                                    </li>
+                                    <li class="button-fint" ><button class="button-menu"><embed type="image/svg+xml" src="assets/img/icons/iconmonstr-email-1.svg">お問い合わせ</button></li>
+                                  </ul>
+                            </div>
+                            <!-- Nav End -->
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
     <!----header hero-->
     <section class="content-fluid banner">
         <div class="row">
@@ -174,7 +233,7 @@
                 
             </div>
 			<div class="row_map">
-			 <frame clas="map"><freme>
+			 <freme clas="map"><freme>
 			 <div class="col_map">
 			    <h2>大きな地図に移動する▷</h2>
 			 </div>
@@ -231,30 +290,30 @@
    
    
    <!----footer---->  
-	 <footer>
+		 <footer>
 	    <div class="logo">
 		   <div class="logo_img">
 		      <img src="">
-			  <h1>ベクトルスマートオブジェクト</h1>
+			  <p class="title-footer">ベクトルスマートオブジェクト</p>
 		   </div>
 		</div>
 		<div class="Menu_footer">
 		   <div class="footer_items">
-		    <ul>
-			  <li><h3>エムケイケイ株式会社</h3></li>
-               <li><p>〒490-1207</p></li>
+		    <ul class="col-lg-3">
+			  <li><p>エムケイケイ株式会社</p></li>
+               <li><h2>〒490-1207</h2></li>
                <li><p>愛知県あま市二ツ寺揚山196番地1<p></li>
-               <li><p>tel. 052-444-1420<p></li>
-               <li><p>mail. contact@mkk-ama.jp<p></li>
+               <li><h2>tel. 052-444-1420<h2></li>
+               <li><h2>mail. contact@mkk-ama.jp<h2></li>
 			</ul>
-			<ul>
+			<ul class="col-lg-3">
 			  <li><p>ホーム</p></li>
                <ul class="submenu"><p>業務内容</p></ul>
 			                   <li><p>製造工程</p></li>
                <li><p>設備紹介<p></li>
                <li><p>お知らせ<p></li>
              </ul>
-			 <ul>
+			 <ul class="col-lg-3">
 			  <li><p>採用情報</p></li>
                <ul class="submenu">
 			                    <li><p>先輩より</p><li>
@@ -263,25 +322,27 @@
 						</ul>
                <li><p>お問い合わせ<p></li>
              </ul>
-			 <ul>
+			 <ul class="col-lg-3">
 			  <li><p>会社案内</p></li>
-               <ul class="submenu"><p>エムケイケイはこんな会社です</p></ul>
-			                   <li><p>会社概要</p></li>
-                               <li><p>メッセージ<p></li>
-                               <li><p>沿革<p></li>
-							   <li><p>ビジョン<p><li></ul>
+               <ul class="submenu"><p>エムケイケイはこんな会社です</p>
+			                      <li><p>会社概要</p></li>
+                                 <li><p>メッセージ<p></li>
+                                  <li><p>沿革<p></li>
+							      <li><p>ビジョン<p><li>
 				</ul>
              
 		   </div>
 		</div>
-		<div class="row_copy">
-		 <p>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</p>
+		 <div class="row">
+           	<div class="row_copy">
+		 <h2>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
 		</div>
- <footer>
 
-    <script></script>
-    <script></script>
-    <script></script>
+		 </div>
+ </footer>
+ <script src ="js/jquery-2.2.4.min.js"></script>
+	<script src ="js/plugin.js"></script>
+  <script src="js/navigation.js"></script>
 </body>
 
 </html>
