--- a/sigle-page.html
+++ b/sigle-page.html
@@ -293,27 +293,31 @@
 		 <footer>
 	    <div class="logo">
 		   <div class="logo_img">
-		      <img src="">
-			  <p class="title-footer">ベクトルスマートオブジェクト</p>
+		      <embed type="image/svg+xml"
+              src="assets/img/icons/logo-ig&news.svg">
+			  
 		   </div>
+           <p class="title-footer">ベクトルスマートオブジェクト</p>
 		</div>
 		<div class="Menu_footer">
 		   <div class="footer_items">
-		    <ul class="col-lg-3">
+		    <ul class="col-lg-4">
 			  <li><p>エムケイケイ株式会社</p></li>
                <li><h2>〒490-1207</h2></li>
                <li><p>愛知県あま市二ツ寺揚山196番地1<p></li>
                <li><h2>tel. 052-444-1420<h2></li>
                <li><h2>mail. contact@mkk-ama.jp<h2></li>
 			</ul>
-			<ul class="col-lg-3">
+			<ul class="col-lg-2 submenu_1">
 			  <li><p>ホーム</p></li>
-               <ul class="submenu"><p>業務内容</p></ul>
-			                   <li><p>製造工程</p></li>
-               <li><p>設備紹介<p></li>
+               <ul class="submenu">
+                   <p>業務内容</p>
+			    <li><p>製造工程</p></li>
+               </ul>
+                <li><p>設備紹介<p></li>
                <li><p>お知らせ<p></li>
              </ul>
-			 <ul class="col-lg-3">
+			 <ul class="col-lg-2 submenu_2">
 			  <li><p>採用情報</p></li>
                <ul class="submenu">
 			                    <li><p>先輩より</p><li>
@@ -322,9 +326,9 @@
 						</ul>
                <li><p>お問い合わせ<p></li>
              </ul>
-			 <ul class="col-lg-3">
+			 <ul class="col-lg-2 ">
 			  <li><p>会社案内</p></li>
-               <ul class="submenu"><p>エムケイケイはこんな会社です</p>
+               <ul class="submenu submenu_3"><p>エムケイケイはこんな会社です</p>
 			                      <li><p>会社概要</p></li>
                                  <li><p>メッセージ<p></li>
                                   <li><p>沿革<p></li>
@@ -335,7 +339,7 @@
 		</div>
 		 <div class="row">
            	<div class="row_copy">
-		 <h2>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
+		 <h2 class="copy">Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
 		</div>
 
 		 </div>
