--- a/sigle-page.html
+++ b/sigle-page.html
@@ -309,26 +309,27 @@
                <li><h2>mail. contact@mkk-ama.jp<h2></li>
 			</ul>
 			<ul class="col-lg-2 submenu_1">
-			  <li><p>ホーム</p></li>
-               <ul class="submenu">
-                   <p>業務内容</p>
-			    <li><p>製造工程</p></li>
+			  <li><div class="viñeta"></div><p>ホーム</p></li>
+              <li><div class="viñeta"></div><p>業務内容</p></li>
+                 <ul class="submenu">
+                    <li><p>製造工程</p></li>
                </ul>
-                <li><p>設備紹介<p></li>
-               <li><p>お知らせ<p></li>
+                <li><div class="viñeta"></div><p>設備紹介<p></li>
+               <li><div class="viñeta"></div><p>お知らせ<p></li>
              </ul>
 			 <ul class="col-lg-2 submenu_2">
-			  <li><p>採用情報</p></li>
+			  <li><div class="viñeta"></div><p>採用情報</p></li>
                <ul class="submenu">
 			                    <li><p>先輩より</p><li>
 			                    <li><p>募集内容</p></li>
 								<li><p>応募フォーム</p></li>
 						</ul>
-               <li><p>お問い合わせ<p></li>
+               <li><div class="viñeta"></div><p>お問い合わせ<p></li>
              </ul>
 			 <ul class="col-lg-2 ">
-			  <li><p>会社案内</p></li>
-               <ul class="submenu submenu_3"><p>エムケイケイはこんな会社です</p>
+			  <li><div class="viñeta"></div><p>会社案内</p></li>
+               <ul class="submenu submenu_3">
+                                   <p>エムケイケイはこんな会社です</p>
 			                      <li><p>会社概要</p></li>
                                  <li><p>メッセージ<p></li>
                                   <li><p>沿革<p></li>
