--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <!---lead---->
 <section class="lead container">
        <div  class="lead-text">
-           <h1>ADVANCED FUSION</h1>
+           <h2>ADVANCED FUSION</h2>
         </div>
         <div  class="content-lead-parragraf ">
            <p>21世紀を迎え、急速に変化する社会情勢の中、我々金型業界においても更なる技術力の更新と、来るべき新たな文明への挑戦が求められております。</p>
@@ -378,42 +378,48 @@
 			  </div>
 		   </div>
 </section>
+     
    <!----footer---->  
-	 <footer>
+		 <footer>
 	    <div class="logo">
 		   <div class="logo_img">
-		      <img src="">
-			  <p class="title-footer">ベクトルスマートオブジェクト</p>
+		      <embed type="image/svg+xml"
+              src="assets/img/icons/logo-ig&news.svg">
+			  
 		   </div>
+           <p class="title-footer">ベクトルスマートオブジェクト</p>
 		</div>
 		<div class="Menu_footer">
 		   <div class="footer_items">
-		    <ul>
+		    <ul class="col-lg-4">
 			  <li><p>エムケイケイ株式会社</p></li>
                <li><h2>〒490-1207</h2></li>
                <li><p>愛知県あま市二ツ寺揚山196番地1<p></li>
                <li><h2>tel. 052-444-1420<h2></li>
                <li><h2>mail. contact@mkk-ama.jp<h2></li>
 			</ul>
-			<ul>
-			  <li><p>ホーム</p></li>
-               <ul class="submenu"><p>業務内容</p></ul>
-			                   <li><p>製造工程</p></li>
-               <li><p>設備紹介<p></li>
-               <li><p>お知らせ<p></li>
+			<ul class="col-lg-2 submenu_1">
+			  <li><div class="viñeta"></div><p>ホーム</p></li>
+              <li><div class="viñeta"></div><p>業務内容</p></li>
+                 <ul class="submenu">
+                    <li><p>製造工程</p></li>
+               </ul>
+                <li><div class="viñeta"></div><p>設備紹介<p></li>
+               <li><div class="viñeta"></div><p>お知らせ<p></li>
              </ul>
-			 <ul>
-			  <li><p>採用情報</p></li>
+			 <ul class="col-lg-2 submenu_2">
+			  <li><div class="viñeta"></div><p>採用情報</p></li>
                <ul class="submenu">
 			                    <li><p>先輩より</p><li>
 			                    <li><p>募集内容</p></li>
 								<li><p>応募フォーム</p></li>
 						</ul>
-               <li><p>お問い合わせ<p></li>
+               <li><div class="viñeta"></div><p>お問い合わせ<p></li>
              </ul>
-			 <ul>
-			  <li><p>会社案内</p></li>
-               <ul class="submenu"><p>エムケイケイはこんな会社です</p>
+			 <ul class="col-lg-2 ">
+			  <li><div class="viñeta"></div><p>会社案内</p></li>
+               <ul class="submenu submenu_3">
+                                   <p>エムケイケイはこんな会社です</p>
 			                      <li><p>会社概要</p></li>
                                  <li><p>メッセージ<p></li>
                                   <li><p>沿革<p></li>
@@ -424,7 +430,7 @@
 		</div>
 		 <div class="row">
            	<div class="row_copy">
-		 <h2>Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
+		 <h2 class="copy">Copyright© 2022 MKK Co., Ltd. All Right Reserve.</h2>
 		</div>
 
 		 </div>
