--- a/index.html
+++ b/index.html
@@ -250,26 +250,30 @@
 </section>
 
 <!---area2---->
-<section  class="Area2 content-fluid">
-	<div class="row">
-       <div class="Area2_img col-lg-6">
+<section  class="background-Area2">
+	<div class="Area2">
+       <div class="Area2_img col-lg-7">
 	               <img src="assets/img/area2/facility.png">
 	    </div>
-		<div class="Area2_text_area col-lg-3">
+		<div class="Area2_text_area col-lg-4">
 	              <h2 class="Area_title">FACILITY</h2>
 				   <h2 class="Area_text">設備のご紹介</h2>
 				   <h3 class="Area_sub_title">設備のご紹介 高精度・高品質の金型製造</h3>
 				     <div class="Area_text_2">
 				         <p>テキスサンプル入りますテキスサンプル入りますテキスサンプル入りますテキスサンプル入りますテキスサンプル入ります。</p>
 				       </div>
-					 <button>Read more</button>
+					 <div class="button_row_2">
+                      <button class="read_more_area2">READ MORE <embed class="row_icon" type="image/svg+xml" src="assets/img/icons/arowr.svg"></button>
+
+					 </div>
+					 
 	    </div>
 	</div>
 </div>
 </section>
 <!---area3---->
-<section  class="Area3 content-fluid">
-	<div class="row">
+<section  class="background-Area3">
+	<div class="Area3">
 	<div class="Area3_text_area col-lg-3">
 	              <h2 class="Area_title_3">INTRODUCING TO THE PROCESS</h2>
 				   <h2 class="Area_sub_title_3">硬い金型の製造工程を 柔らかくご紹介</h2>
