estilos  y  diseño de area  3

--- a/index.html
+++ b/index.html
@@ -280,14 +280,20 @@
 				     <div class="Area_text_3">
 				         <p>ひとつの金属パーツをプレスで製造する場合、縁の切断や穴あけ加工、細かな曲線の再現等、いくつかの工程に分割する必要があります・・・</p>
 				       </div>
-					 <button>Read more</button>
-	     </div>
+					 <div class="button_row_3">
+                        <button class="read_more_area3">READ MORE <embed class="row_icon" type="image/svg+xml" src="assets/img/icons/arowr.svg"></button>
+
+					 </div>
+		</div>
             <div class="Area3_img col-lg-6">
-	               <img src="assets/img/area3/1.png">
-				   <img class="dog_area3">
+	               <img class="area_img_back" src="assets/img/area3/1.png">
+				   <img class="dog_area3" src="assets/img/area3/dogo_globo.png">
+				   <div class="text_container">
 				   <p class="text_dog_area3">
 				   柔らかくご紹介 いたします ワン！！
 				   </p>
+				   </div>
+				   <div id="triangulo"></div>
 	       </div>
 		</div>
 </section>
