ajuste  de  texto en  area de contacto

--- a/index.html
+++ b/index.html
@@ -334,15 +334,18 @@
 		      <div class="container_contact">
 		       <h2 class="title_contact">contact</h2>
 			   <h2  class="titlesub_contact">お問い合わせ</h2>
-		      <h4>設備・製品に関するご相談・お問い合わせは、
+			   <div class="text_contact">
+				     <h4>設備・製品に関するご相談・お問い合わせは、
                 お気軽にご連絡ください。</h4>
+			   </div>
+		    
 		      </div>
 			  <div class="buttons_contact">
 			       <div class="button_mail">
 				      <button><p>お問い合わせ</p></button>
 				   </div>
-				   <div class="Phone">
-				      <ul>
+				   <div class="Phone_contact">
+				      <ul class="list_phone">
 					  <li><h2>052-444-1420</h2><li>
 					  <li><h5>平日 8:30-17:15（12:00-13:00除く）</h5></li>
 					  </ul>
