ajuste de pantallas  de  1024 px a  1900 px , se implementara  cards  y nuevo navigator junto con scroll top

--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
    </div>
 </section>
 
-<!------
+
 <nav class="header-area container">
- Navbar Area
+ <!----Navbar Area---->
         <div class="academy-main-menu">
             <div class="classy-nav-container  breakpoint-off">
                 <div class="content-menu">
-                    Menu 
+                   <!---- Menu --->
                     <nav class="classy-navbar justify-content-between" id="academyNav">
 
-                    Navbar Toggler
+                    <!---------Navbar Toggler--->
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
-                        Menu
+                       <!--- Menu---> 
                         <div class="classy-menu">
 
-                            close btn
+                            <!--- close btn---> 
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
                             </div>
@@ -134,7 +134,7 @@
             </div>
         </div>
     </nav>
-------->
+
 <!---lead---->
 <section class="lead container">
        <div  class="lead-text">
@@ -277,7 +277,7 @@
 <!---area3---->
 <section  class="background-Area3">
 	<div class="Area3">
-	<div class="Area3_text_area col-lg-4  col-md-4">
+	<div class="Area3_text_area col-lg-4  col-md-5">
 	              <h2 class="Area_title_3">INTRODUCING TO THE PROCESS</h2>
 				   <h2 class="Area_sub_title_3">硬い金型の製造工程を 柔らかくご紹介</h2>
 				     <div class="Area_text_3">
@@ -288,7 +288,7 @@
 
 					 </div>
 		</div>
-            <div class="Area3_img col-lg-6 col-md-6">
+            <div class="Area3_img col-lg-6 col-md-5">
 	               <img class="area_img_back" src="assets/img/area3/1.png">
 				   <img class="dog_area3" src="assets/img/area3/dogo_globo.png">
 				   <div class="text_container">
